fix button on ios

--- a/src/components/albumCarousel/albumCarousel.css
+++ b/src/components/albumCarousel/albumCarousel.css
@@ -21,7 +21,7 @@
     border: solid white 4px;
     color: white;
     border-radius: 80px;
-    font-size: 60px;
+    font-size: 4.167vw;
     display: flex;
     justify-content: center;
     align-items: center;
